--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 <body>
   <header class='container row'>
     <div class='six columns'><h1>Tutrlebay</h1></div>
-    <div class='six columns'>Nav Links Go Here</div>
+    <div class='six columns'><% render 'shared/nav_links' %></div>
   </header>
   <div class='container'><%= yield %></div>
 </body>
