--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,11 +1,23 @@
 <h4>Create your account</h4>
-  <%= render 'shared/form_errors' %>
-  <form class='form' method='post' action='/users'>
-    <%= render 'users/user_inputs' %>
-    <div class='form-group'>
-      <label for='password_confirmation'>Password Confirmation:</label>
-      <input id='password_confirmation' name='user[password_confirmation]' type='password' value='' />
-    </div>
-    <input class='button-primary' type='submit' value='Sign Up' />
-  </form>
-</div>
+<%= render 'shared/form_errors' %>
+<%= form_for @user do |f| %>
+  <div>
+    <%= f.label :username %>
+    <%= f.text_field :username %>
+  </div>
+  <div>
+    <%= f.label :email %>
+    <%= f.email_field :email %>
+  </div>
+  <div>
+    <%= f.label :password %>
+    <%= f.password_field :password %>
+  </div>
+  <div>
+    <%= f.label :password_confirmation, "Password Confirmation" %>
+    <%= f.password_field :password_confirmation %>
+  </div>
+  <div>
+    <%= f.submit 'Sign Up', class: 'button-primary' %>
+  </div>
+<% end %>
