--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,8 @@
 </head>
 <body>
   <header class='container row'>
-    <div class='six columns'><h1>Tutrlebay</h1></div>
-    <div class='six columns'><% render 'shared/nav_links' %></div>
+    <div class='six columns'><h1>Turtlebay</h1></div>
+    <div class='six columns'><%= render 'shared/nav_links' %></div>
   </header>
   <div class='container'><%= yield %></div>
 </body>
