--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <div class='six columns'><%= render 'shared/nav_links' %></div>
   </header>
   <div class='container'>
-    <div class='flash-messages'><%= render '/shared/form_errors' %></div>
+    <div class='flash-messages'><%= render '/shared/flash_errors' %></div>
     <%= yield %>
   </div>
 </body>
