Add class to list tag for stlying

--- a/app/views/shared/_flash_errors.html.erb
+++ b/app/views/shared/_flash_errors.html.erb
@@ -2,7 +2,7 @@
   <div class="messages error">
     <ul>
       <% flash[:error].each do |error| %>
-        <li><%= error%></li>
+        <li class="messages"><%= error%></li>
       <% end %>
     </ul>
   </div>
