--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -3,34 +3,15 @@
   color: black;
 }
 
-.flash-messages {
-  text-align: center;
-  margin: 0 auto;
-  margin-bottom: 30px;
-  color: white;
-  min-height: 60px;
+.placeholder {
+  height: 400px;
+  width: 100%;
+  background-color: #C3C3C3;
 }
 
-.flash-messages ul, li {
-  margin: 0;
-}
-
-.messages {
-  padding: 5px;
-  border-radius: 5px;
-}
-
-.success {
-  border: 1px solid #03C203;
-  background-color: #89D489;
-}
-
-.notice {
-  border: 1px solid #FF8F00;
-  background-color: #FFC457;
-}
-
-.error {
-  background-color: #FF4A4A;
-  border: 1px solid #DF0000;
+.bid-button {
+  width: 100%;
+  height: 3em;
+  font-size: 1.5em;
+  padding-top: 12px;
 }
