Update Edit link to proper paty and add a conditional that checks if the item is closed for bidding

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -20,9 +20,11 @@
       <% if current_user != @item.seller %>
         <a class="button button-primary bid-button" href="#">Bid</a>
       <% else %>
-        <a class="button" href="#">Edit</a>
+        <a class="button" href="/items/<%= @item.id %>/edit">Edit</a>
         <a class="button" href="#">Delete</a>
       <% end %>
+    <% elsif !@item.open_for_bids %>
+      <p>This item is closed.</p>
     <% else %>
       <p><a href="/login">Login</a> to make a bid.</p>
     <% end %>
