--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,18 +1,7 @@
 <div class="row">
   <div class="twelve columns">
     <h3>Edit Your Item</h3>
-    <%= form_for @item do |f| %>
-      <%= f.label :title %>
-      <%= f.text_field :title %><br />
-
-      <%= f.label :description %>
-      <%= f.text_field :description %><br />
-
-      <%= f.label :starting_bid %>
-      $ <%= f.text_field :starting_bid, :placeholder => "0.00" %><br />
-
-      <%= f.submit :class => 'button button-primary'%>
-    <% end %>
+    <%= render partial: "form_item" %>
     <a class="button" href="/items/<%= @item.id %>">Cancel</a>
   </div>
 </div>
