--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,2 +1,3 @@
-<h3>Welcome to Turtle Bay</h3>
-<p>Auction your junk. This is filler for now.</p>
+<% @items.each do |item| %>
+  <p><%= link_to "#{item.title} (#{number_to_currency(item.starting_bid)})", item_path(item) %></p>
+<% end %>
