Display current highest bid and add item id as hidden form field

--- a/app/views/bids/new.html.erb
+++ b/app/views/bids/new.html.erb
@@ -1,9 +1,12 @@
 <div class="row">
   <div class="twelve columns">
     <h3>Bid on <%= @item.title %></h3>
+    <p>Current highest bid: <%= number_to_currency(@item.top_bid.amount) %></p>
     <%= form_for @bid do |f| %>
       <%= f.label :amount %>
       $ <%= f.text_field :amount, :placeholder => bid_placeholder(@item) %><br />
+
+      <%= f.hidden_field :item_id, :value => @item.id %>
 
       <%= f.submit 'Bid', :class => 'button button-primary'%>
     <% end %>
