Change styling for item image to no longer be a placeholder

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -3,10 +3,8 @@
   color: black;
 }
 
-.placeholder {
-  height: 400px;
+.item-img {
   width: 100%;
-  background-color: #C3C3C3;
 }
 
 .bid-button {
