--- a/app/views/items/_form_item.html.erb
+++ b/app/views/items/_form_item.html.erb
@@ -1,6 +1,9 @@
-<%= form_for @item do |f| %>
+<%= form_for @item, url: items_path, html: { multipart: true } do |f| %>
   <%= f.label :title %>
   <%= f.text_field :title %><br />
+
+  <%= f.label :image %>
+  <%= f.file_field :image %><br />
 
   <%= f.label :description %>
   <%= f.text_field :description %><br />
