--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="six columns">
-    <img class="placeholder" src="images/placeholder.png">
+    <%= image_tag @item.image.url, class: "item-img" %>
   </div>
   <div class="six columns">
     <h3><%= @item.title %></h3>
