--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -7,9 +7,53 @@
   width: 100%;
 }
 
+.upload-img {
+  height: 98%;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  top: 0;
+}
+
 .bid-button {
   width: 100%;
   height: 3em;
   font-size: 1.5em;
   padding-top: 12px;
 }
+.img-section {
+  position: relative;
+}
+
+.inputfile {
+  width: 0.1px;
+  height: 0.1px;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  z-index: -1;
+}
+
+.file-btn {
+  text-align: center;
+  position: absolute;
+  top: 44%;
+  left: 10%;
+  margin: 0 auto;
+  width: 80%;
+  font-size: .75em;
+  font-weight: 700;
+  color: white;
+  background-color: #33C3F0;
+  border-radius: 5px;
+  padding: 15px 0px;
+  text-transform: Uppercase;
+  cursor: pointer;
+}
+
+.file-btn:focus,
+.file-btn:hover {
+    background-color:  #1EAEDB;
+}
+
+
