--- a/app/views/items/_form_item.html.erb
+++ b/app/views/items/_form_item.html.erb
@@ -2,14 +2,16 @@
   <div class="row">
     <div class="six columns">
       <div class="img-section">
-        <% if @item.image %>
-        <%= image_tag @item.image.url, class: "item-img" %>
-        <% end %>
-        <div class="upload-img">
+        <% if @item.image_file_name.nil? %>
           <%= f.file_field :image, id:"file", class: "inputfile" %><br />
-          <label class="file-btn" for="file">Choose a file</label>
-        </div>
-
+            <label class="file-btn" for="file">Choose an Image</label>
+        <% else %>
+          <%= image_tag @item.image.url, class: "item-img" %>
+          <div class="upload-img">
+            <%= f.file_field :image, id:"file", class: "inputfile" %><br />
+            <label class="file-btn" for="file">Choose a Image</label>
+          </div>
+        <% end %>
       </div>
     </div>
     <div class="six columns">
