--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -3,7 +3,7 @@
     <h3>Auction a New Item</h3>
   </div>
 </div>
-<%= form_for @item, url: items_path, html: { multipart: true }, do |f| %>
+<%= form_for @item, url: items_path, html: { multipart: true } do |f| %>
   <%= render partial: "form_item", locals: { f: f } %>
 <% end %>
 
